force-app/main/default/objects/Issue_Sort_Order__mdt/Issue_Sort_Order__mdt.object-meta.xml
<CustomObject>
    <description>Hold info about sorted issues on the board</description>
    <label>Issue Sort Order</label>
    <pluralLabel>Issue Sort Orders</pluralLabel>
</CustomObject>