force-app/main/default/objects/Issue_Sort_Order__mdt/fields/Board_Id__c.field-meta.xml
<CustomField>
    <fullName>Board_Id__c</fullName>
    <label>Board Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>