force-app/main/default/objects/Issue_Sort_Order__mdt/fields/Issue_Ids__c.field-meta.xml
<CustomField>
    <fullName>Issue_Ids__c</fullName>
    <description>Issue ids sorted with user order for each of the column (JSON)</description>
    <label>Issue Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>